+Now all SDV Object and BigCraftable items are registered by their 1.6 item ids in the ObjectManager to unify some of the object fetching/creation logic.
+Added support for ItemReference to hold info for Artisinal goods.
~Fixed a bug where having multiple cellars built on the farm causes the game to not load???

~~~~~~~~~~~~0.0.1 Revitalize 12-28-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added in infrastructure to add in new buildings! Now custom buildings can be added in for the mod.
+Added in a buildable Cellar. The first tier is smaller than the farmhouse cellar. May add in more into the future.
+Made BuildingBlueprintHelper.cs to help make Stardew Valley Building Blueprints easier.


~~~~~~~~~~~~0.0.1 Revitalize 12-20-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added Statue of Statistics.
    Shows multiple statistics about the player.
+Added in Statue of Perfection Tracking.
    -Tells you what you are missing from shipped items, cooking recipes, crafting recipes, and caught fish.
+Added in Advanced Solar Panels
    -Makes a Battery Pack every 5 sunny days.
+Added in Superior Solar Panels
    -Makes a Battery Pack every 3 sunny days.
~~~~~~~~~~~~0.0.1 Revitalize 12-12-2022 xx.xx P.M~~~~~~~~~~~~~~
~ElectricFurnaces (and their upgrade tiers) now glow when smelting items.
~Reworked some logic regarding the LightManager class to work better, but it might still have issues since that original code was written years ago so there might be cases where I should makde different changes.
    -These changes would be made in CustomObject.cs or CustomItem.cs initializeLightSource, where maybe there should just be one initial light source???
~Fixed some code issues with adding LightSources with the LightManager to some machines.
~Added a more straightforward way to add light sources on CustomObjects
~Added LightSources to BatteryGenerators and CharcoalKilns.
~Fixed a glitch where Charcoal Kilns would work as long as a single piece of wood was provided.